Integrate file upload functionality and Docling for text extraction

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@azure/storage-blob": "^12.24.0"
+  }
 }
